2006-10-17  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-window.c: made all info notes
	  created from home system modal to avoid them ending up
	  behind another dialog

2006-10-16  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.95

2006-10-16  Johan Bilien <johan.bilien@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: Use an animation banner,
	  not a progress banner. Fixes the fix to NB#42256

2006-10-16  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-others-button.c: Copy the 
	system wide config file if there is no user one. Fixes: NB#42202

2006-10-16  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-applet.c: Keep track of children
	  creating windows to make sure the close button and resize handle
	  are always on top, as well as our event window
	  Fixes: NB#42549

2006-10-13  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hildon-navigator-window.c: Added hardcoced gettext
	  package for tn-cpa. Fixes: NB#37100

2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Apply correct name to
      the AS menu depending on its thumbable property. Fixes: NB#43294

2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/background-manager.c: do not run the main
	  loop when generating the background when we have no cancel
	  banner (theme change)

2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Task Navigator requires full binary path in .desktop file
	Exec field". Fixes NB#39036
	* hildon-navigator/hn-others-button.c:use g_find_program_in_path
	  to resolve program path

2006-10-13  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/background-manager.c: Do not hardcode hildon home window
	  size. Fixes: NB#43264

2006-10-13  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Removed g_debug
	  leaking memory.